--- a/compose.yaml
+++ b/compose.yaml
@@ -1,9 +1,34 @@
+version: '2'
+
 services:
   app:
     build: .
+    tty: true
     container_name: django-app
-    command: python manage.py runserver 0.0.0.0:8000
+    #command: python manage.py runserver 0.0.0.0:8000
     ports:
       - '8000:8000'
     volumes:
       - .:/app
+    depends_on:
+      - db
+   # networks:
+      #- appDb
+
+  db:
+    image: postgres:15
+    volumes: 
+      - postgres_data:/var/lib/postgresql/data/
+    ports:
+      - '5432:5432'
+    environment:
+    - "POSTGRES_HOST_AUTH_METHOD=trust"
+    #networks:
+      #- appDb
+
+volumes:
+  postgres_data:
+
+#networks:
+  #appDb:
+    #driver: overlay
